updated maven img version to fix vulnerabilities

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
-FROM maven:3.8.5-openjdk-17
+FROM maven:3.9.11-eclipse-temurin-17
 # FROM maven:3.8.2-jdk-8 # for Java 8
 
 WORKDIR /bezkoder-app
 COPY . .
-RUN mvn clean install
+RUN mvn clean package -DskipTests
 
 CMD mvn spring-boot:run
